Fix/Change layout of Dashboard gaps

--- a/static/dashboard/css/dashboard.css
+++ b/static/dashboard/css/dashboard.css
@@ -1,5 +1,5 @@
-.application-list,
-.watchlist {
+#application-list,
+#watch-list {
   display: flex;
   flex-direction: column;
   gap: 20px;
